load("@rules_python//python:defs.bzl", "py_binary", "py_library")

exports_files(
    [
        "known_homonyms_test.py",
        "known_typos.py",
        "name_pairs_completeness_test.py",
        "name_pairs_test.py",
    ],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "json_io",
    srcs = ["json_io.py"],
    visibility = [":__subpackages__"],
)

py_library(
    name = "vernacular",
    srcs = [
        "known_typos.py",
        "vernacular.py",
    ],
    visibility = [":__subpackages__"],
)

py_library(
    name = "process",
    srcs = ["process.py"],
    visibility = [":__subpackages__"],
)

py_binary(
    name = "global_names_tool",
    srcs = ["global_names.py"],
    main = "global_names.py",
    visibility = ["//external_sources:__subpackages__"],
    deps = [
        ":process",
        "//tools:settings",
    ],
)

py_binary(
    name = "name_pairs_clean_tool",
    srcs = [
        "known_typos.py",
        "name_pairs_clean.py",
    ],
    main = "name_pairs_clean.py",
    visibility = ["//external_sources:__subpackages__"],
    deps = [
        ":process",
        "//tools:settings",
    ],
)

py_binary(
    name = "enfo_hu",
    srcs = ["enfo_hu.py"],
    main = "enfo_hu.py",
    visibility = ["//external_sources/enfo_hu:__pkg__"],
    deps = [
        ":json_io",
        "//tools:settings",
    ],
)

py_binary(
    name = "plant_names_in_hungarian",
    srcs = [
        "known_typos.py",
        "plant_names_in_hungarian.py",
    ],
    main = "plant_names_in_hungarian.py",
    visibility = ["//external_sources:__pkg__"],
    deps = [
        ":json_io",
        "//tools:settings",
    ],
)
