load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "json_io",
    srcs = ["json_io.py"],
    visibility = [":__subpackages__"],
)

py_library(
    name = "known_typos",
    srcs = ["known_typos.py"],
    visibility = ["//external_sources:__subpackages__"],
)

py_library(
    name = "vernacular",
    srcs = ["vernacular.py"],
    visibility = [":__subpackages__"],
    deps = [":known_typos"],
)

py_library(
    name = "process",
    srcs = ["process.py"],
)

py_library(
    name = "models",
    srcs = ["models.py"],
    visibility = ["//external_sources:__subpackages__"],
)

py_binary(
    name = "global_names",
    srcs = ["global_names.py"],
    main = "global_names.py",
    visibility = ["//external_sources:__subpackages__"],
    deps = [
        ":process",
        "//tools:settings",
    ],
)

py_binary(
    name = "name_pairs_clean",
    srcs = ["name_pairs_clean.py"],
    main = "name_pairs_clean.py",
    visibility = ["//external_sources:__subpackages__"],
    deps = [
        ":known_typos",
        ":models",
        ":process",
        "//tools:settings",
    ],
)

py_binary(
    name = "enfo_hu",
    srcs = ["enfo_hu.py"],
    main = "enfo_hu.py",
    visibility = ["//external_sources/enfo_hu:__pkg__"],
    deps = [
        ":json_io",
        "//tools:settings",
    ],
)

py_binary(
    name = "plant_names_in_hungarian",
    srcs = ["plant_names_in_hungarian.py"],
    main = "plant_names_in_hungarian.py",
    visibility = ["//external_sources:__pkg__"],
    deps = [
        ":json_io",
        ":known_typos",
        "//tools:settings",
    ],
)

py_library(
    name = "known_homonyms_test",
    testonly = True,
    srcs = ["known_homonyms_test.py"],
    visibility = ["//external_sources:__pkg__"],
)

py_library(
    name = "name_pairs_test",
    testonly = True,
    srcs = ["name_pairs_test.py"],
    visibility = ["//external_sources:__subpackages__"],
)

py_library(
    name = "name_pairs_completeness_test",
    testonly = True,
    srcs = ["name_pairs_completeness_test.py"],
    visibility = ["//external_sources:__subpackages__"],
)
