load("@rules_python//python:defs.bzl", "py_library", "py_runtime", "py_runtime_pair")
load(":flags.bzl", "bool_flag")

exports_files(
    ["coverage.rc"],
    visibility = ["//:__subpackages__"],
)

bool_flag(
    name = "coverage",
    build_setting_default = False,
    visibility = ["//:__subpackages__"],
)

config_setting(
    name = "coverage_enabled",
    flag_values = {":coverage": "true"},
    visibility = ["//:__subpackages__"],
)

py_runtime(
    name = "python_3_14_runtime",
    interpreter = "@python//:python",
)

py_runtime_pair(
    name = "python_3_14_runtime_pair",
    py3_runtime = ":python_3_14_runtime",
)

toolchain(
    name = "python_3_14_toolchain",
    toolchain = ":python_3_14_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "nix_site_packages",
    data = ["@python//:site_packages_files"],
    imports = ["rules_nixpkgs_core++nix_pkg+python/lib/python3.14/site-packages"],
    visibility = ["//:__subpackages__"],
)
