load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "latin_magyarorszagon_vedett_allatok",
    srcs = [
        "latin_magyarorszagon_vedett_allatok.py",
        "//tools/extract:known_typos.py",
    ],
    main = "latin_magyarorszagon_vedett_allatok.py",
    visibility = ["//external_sources/wikibooks_hu:__pkg__"],
    deps = [
        "//tools:settings",
        "//tools/extract:json_io",
    ],
)

py_binary(
    name = "novenyek_magyar_latin_nepies",
    srcs = [
        "novenyek_magyar_latin_nepies.py",
        "//tools/extract:known_typos.py",
    ],
    main = "novenyek_magyar_latin_nepies.py",
    visibility = ["//external_sources/wikibooks_hu:__pkg__"],
    deps = [
        "//tools:settings",
        "//tools/extract:json_io",
    ],
)
