load("//tools/python:py_binary.bzl", "py_binary")

py_binary(
    name = "latin_magyarorszagon_vedett_allatok",
    visibility = ["//external_sources/wikibooks_hu:__pkg__"],
    deps = [
        "//tools:settings",
        "//tools/extract:json_io",
        "//tools/extract:vernacular",
    ],
)

py_binary(
    name = "novenyek_magyar_latin_nepies",
    visibility = ["//external_sources/wikibooks_hu:__pkg__"],
    deps = [
        "//tools:settings",
        "//tools/extract:json_io",
        "//tools/extract:vernacular",
    ],
)
